Modifications pages projets html & css

--- a/angularProject/nogashiFront/src/app/components/modules/social-box/social-box.component.html
+++ b/angularProject/nogashiFront/src/app/components/modules/social-box/social-box.component.html
@@ -7,4 +7,7 @@
                 <li class="twitter">
                     <a href="https://www.google.com/search?client=firefox-b&q=twitter"><i class="fab fa-twitter"></i></a>
                 </li>
+                <li class="instagram">
+                   <a href="https://www.instagram.com/?hl=fr"><i class="fab fa-instagram"></i></a>
+                </li>
             </ul>
