--- a/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/login/login.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/login/login.component.html
@@ -25,4 +25,5 @@
           <a routerLink="/passwordRescue" class="lien-compte"><p>Mot de passe oublié</p></a>
           <p *ngIf="userEmailNotValidate!=null" >Votre pseudo et mot de passe sont bons mais votre email n'est pas validée. <br>Un email de validation vous a été envoyé précédement (vérifiez dans les courriers indésirables au besoin)<a (click)="sendEmailValidation()" >Cliquez sur ce lien pour demande l'envois d'un nouveau mail</a></p>
         </form>
-    </div> </section>
+    </div>
+</section>
