--- a/angularProject/nogashiFront/src/app/components/pages/pages_common/compte-commandes/compte-commandes.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_common/compte-commandes/compte-commandes.component.html
@@ -162,7 +162,7 @@
                 <td class="td-titre col-2">Total</td>
               </tr>
               <tr class="tr">
-                <td class="td-produits col-4">Croissant</td>
+                <td class="td col-4">Croissant</td>
                 <td class="td col-3">1.10€</td>
                 <td class="td col-3">02</td>
                 <td class="td col-2">2.20€</td>
