--- a/angularProject/nogashiFront/src/app/components/pages/pages_common/compte-commentaires/compte-commentaires.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_common/compte-commentaires/compte-commentaires.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="bloc-bonjour-compte col-12">
         <div class="bloc-avatar">
-          <img class="img" src="css/img/profil/profil.png" alt="photo de l'utilisateur">
+          <img class="img" src="assets/img/profil/profil.png" alt="photo de l'utilisateur">
         </div>
         <div class="bloc-bonjour">
           <h2>Bonjour John Doe</h2>
