--- a/angularProject/nogashiFront/src/app/components/pages/pages_common/compte-preferences/compte-preferences.component.scss
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_common/compte-preferences/compte-preferences.component.scss
@@ -74,7 +74,8 @@ h2 {
   border: 1px solid var(--couleurVerte);
   border-radius: 8px 00px 00px 8px;
   background-color: var(--couleurNoir);
-  padding: 10px;
+  padding-top: 14px;
+  padding-bottom: 1px;
   cursor: pointer;
   opacity: 0.5;
 }
@@ -94,7 +95,8 @@ h2 {
   color: var(--couleurVerte);
   border: 1px solid var(--couleurVerte);
   background-color: var(--couleurNoir);
-  padding: 10px;
+  padding-top: 14px;
+  padding-bottom: 1px;
   -webkit-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
   cursor: pointer;
@@ -116,7 +118,8 @@ h2 {
   color: var(--couleurVerte);
   border: 1px solid var(--couleurVerte);
   background-color: var(--couleurNoir);
-  padding: 10px;
+  padding-top: 14px;
+  padding-bottom: 1px;
   -webkit-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
   cursor: pointer;
@@ -139,7 +142,8 @@ h2 {
   border: 1px solid var(--couleurVerte);
   border-radius: 0px 8px 8px 0px;
   background-color: var(--couleurNoir);
-  padding: 10px;
+  padding-top: 14px;
+  padding-bottom: 1px;
   -webkit-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
   cursor: pointer;
