--- a/angularProject/nogashiFront/src/app/components/common/footer/footer.component.html
+++ b/angularProject/nogashiFront/src/app/components/common/footer/footer.component.html
@@ -28,7 +28,12 @@
               <a href="https://fr-fr.facebook.com/">
                 <li class="menu-footer2"><i class="fab fa-facebook-square"></i> Facebook</li>
               </a>
-              <a href="https://twitter.com/?lang=fr"><li class="menu-footer2"><i class="fab fa-twitter-square"></i> Twitter</li></a>
+              <a href="https://twitter.com/?lang=fr">
+                <li class="menu-footer2"><i class="fab fa-twitter-square"></i> Twitter</li>
+              </a>
+              <a href="https://www.instagram.com/?hl=fr">
+                <li class="menu-footer2"><i class="fab fa-instagram"></i> Instagram</li>
+              </a>
             </ul>
             <hr>
           </div>
