--- a/angularProject/nogashiFront/src/app/components/modules/scheduler-week-txt/scheduler-week-txt.component.html
+++ b/angularProject/nogashiFront/src/app/components/modules/scheduler-week-txt/scheduler-week-txt.component.html
@@ -1,1 +1,40 @@
-<p>scheduler-week-txt works!</p>
+
+
+
+
+
+
+<div class="header_space"></div>
+
+<h1>Test</h1>
+<div class="col-xs-12">
+  <div *ngIf="scheduler_simplified">
+    <div>
+      <div>Horaires d'ouvertures :</div>
+      <div *ngFor="let simpl of scheduler_simplified; index as i">
+        <div>
+          <div *ngFor="let dayRange of simpl.dayRanges">
+            <div *ngIf="dayRange.startDay === dayRange.endDay; else rangeToDisplay" >
+              {{dayName(dayRange.startDay)}}
+            </div>
+            <ng-template #rangeToDisplay>
+              <p>De {{dayName(dayRange.startDay)}} à {{dayName(dayRange.endDay)}}</p>
+            </ng-template>
+          </div>
+          <div *ngFor="let hr of simpl.day.hoursRanges">
+            <div>{{minutesToTimeDisplay_TimeZoneClient(hr.startTime)}} - {{minutesToTimeDisplay_TimeZoneClient(hr.endTime)}}</div>
+          </div>
+          <div *ngIf="editMode">
+            <button class="delete" (click)="remove(i)" >x</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div *ngIf="editMode">
+
+    </div>
+
+  </div>
+</div>
+
