--- a/angularProject/nogashiFront/src/app/components/modules/scheduler-week-txt/scheduler-week-txt.component.html
+++ b/angularProject/nogashiFront/src/app/components/modules/scheduler-week-txt/scheduler-week-txt.component.html
@@ -55,29 +55,29 @@
       <div>
         <p>De
         <select [(ngModel)]="ip_dayStart" >
-          <option *ngFor="let dayIndex of ip_listDayIndex" >{{dayName(dayIndex)}}</option>
+          <option *ngFor="let dayIndex of ip_listDayIndex" [ngValue]="dayIndex" >{{dayName(dayIndex)}}</option>
         </select>
           à
         <select [(ngModel)]="ip_dayEnd" >
-          <option *ngFor="let dayIndex of ip_listDayIndex" >{{dayName(dayIndex)}}</option>
+          <option *ngFor="let dayIndex of ip_listDayIndex" [ngValue]="dayIndex" >{{dayName(dayIndex)}}</option>
         </select>
         <button (click)="addDayRange()" >Ajouter</button>
       </div>
       <div>
         <div>
           <select [(ngModel)]="ip_hourStart_h" >
-            <option *ngFor="let h of ip_listHours" >{{h}} h</option>
+            <option *ngFor="let h of ip_listHours" [ngValue]="h" >{{h}} h</option>
           </select>
           <select [(ngModel)]="ip_hourStart_min" >
-            <option *ngFor="let minutes of ip_listMinutes" >{{minutes}} m</option>
+            <option *ngFor="let minutes of ip_listMinutes" [ngValue]="minutes" >{{minutes}} m</option>
           </select>
         </div>
         <div>
           <select [(ngModel)]="ip_hourEnd_h" >
-            <option *ngFor="let h of ip_listHours" >{{h}} h</option>
+            <option *ngFor="let h of ip_listHours" [ngValue]="h" >{{h}} h</option>
           </select>
           <select [(ngModel)]="ip_hourEnd_min" >
-            <option *ngFor="let minutes of ip_listMinutes" >{{minutes}} m</option>
+            <option *ngFor="let minutes of ip_listMinutes" [ngValue]="minutes" >{{minutes}} m</option>
           </select>
         </div>
         <button (click)="addHoursRange()" >Ajouter</button>
