--- a/angularProject/nogashiFront/src/app/components/modules/scheduler-week-vsl/scheduler-week-vsl.component.html
+++ b/angularProject/nogashiFront/src/app/components/modules/scheduler-week-vsl/scheduler-week-vsl.component.html
@@ -2,47 +2,36 @@
 
 
 <div class="week">
-  <div *ngFor="let day of displaylistDay" class="day">
-    <div class="name">{{dayName(day)}}</div>
-    <div class="hours_container">
 
+
+
+
+  <div *ngIf="scheduler.type === 0; else singleDisplay" class="container_layers" >
+    <div *ngFor="let weekTyped of scheduler.group" class="container_layers" >
+      <div *ngFor="let day of weekTyped.days" class="hours_container offseted" [ngStyle]="{'left': (day.day * 90) + 'px'}" >
+        <div *ngFor="let hourR of day.hoursRanges" class="hoursRange hoursRange_{{weekTyped.type}}" [ngStyle]="{'top': ((hourR.startTime / (24 * 60)) * 100) +'%', 'height': ((( hourR.endTime - hourR.startTime) / (24 * 60)) * 100) + '%'}" ></div>
+      </div>
     </div>
   </div>
+
+  <ng-template #singleDisplay>
+    <div *ngFor="let day of scheduler.days" class="hours_container offseted" [ngStyle]="{'left': (day.day * 90) + 'px'}" >
+      <div *ngFor="let hourR of day.hoursRanges" class="hoursRange hoursRange_{{scheduler.type}}" [ngStyle]="{'top': ((hourR.startTime / (24 * 60)) * 100) +'%', 'height': ((( hourR.endTime - hourR.startTime) / (24 * 60)) * 100) + '%'}" ></div>
+    </div>
+  </ng-template>
+
   <div class="hours_container offseted">
     <div *ngFor="let hour of displaylistHours; index as i" class="hoursLine">
       <div class="txt">{{hour}}h</div>
     </div>
   </div>
 
+  <div *ngFor="let day of displaylistDay" class="day">
+    <div class="name">{{dayName(day)}}</div>
+    <div class="hours_container">
+    </div>
+  </div>
 </div>
-
-<!--
-<table>
-  <thead>
-  <tr>
-    <th>{{dayName(0)}}</th>
-    <th>{{dayName(1)}}</th>
-    <th>{{dayName(2)}}</th>
-    <th>{{dayName(3)}}</th>
-    <th>{{dayName(4)}}</th>
-    <th>{{dayName(5)}}</th>
-    <th>{{dayName(6)}}</th>
-  </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let hour of displaylistHours" class="hours">
-      <td>a</td>
-      <td>a</td>
-      <td>a</td>
-      <td>a</td>
-      <td>a</td>
-      <td>a</td>
-      <td>a</td>
-    </tr>
-  </tbody>
-</table>
-
--->
 
 
 
