--- a/angularProject/nogashiFront/src/app/components/modules/scheduler-week-txt/scheduler-week-txt.component.html
+++ b/angularProject/nogashiFront/src/app/components/modules/scheduler-week-txt/scheduler-week-txt.component.html
@@ -1,16 +1,9 @@
 
 
-
-
-
-
-<div class="header_space"></div>
-
-<h1>Test</h1>
 <div class="col-xs-12">
   <div *ngIf="scheduler_simplified">
     <div>
-      <div>Horaires d'ouvertures :</div>
+      <h3>Horaires {{typeName(schedulerType)}} :</h3>
       <div *ngFor="let simpl of scheduler_simplified; index as i">
         <div class="line">
           <div *ngFor="let dayRange of simpl.dayRanges">
@@ -18,7 +11,7 @@
               {{dayName(dayRange.startDay)}}
             </div>
             <ng-template #rangeToDisplay>
-              <p>De {{dayName(dayRange.startDay)}} à {{dayName(dayRange.endDay)}}</p>
+              <p>Du {{dayName(dayRange.startDay)}} au {{dayName(dayRange.endDay)}}</p>
             </ng-template>
           </div>
           <div *ngFor="let hr of simpl.day.hoursRanges">
@@ -34,14 +27,14 @@
     <div *ngIf="editMode" class="editContainer">
 
       <!-- Disply cumulated dayRanges and HoursRanges, before adding into the real ScheduledDay. -->
-      <h1>Edition : </h1>
+      <div>Edition : </div>
       <div class="line">
         <div *ngFor="let dayRange of edit_scheduler_simplified.dayRanges; index as i">
           <div *ngIf="dayRange.startDay === dayRange.endDay; else rangeToDisplay" >
             {{dayName(dayRange.startDay)}}
           </div>
           <ng-template #rangeToDisplay>
-            <p>De {{dayName(dayRange.startDay)}} à {{dayName(dayRange.endDay)}}</p>
+            <p>Du {{dayName(dayRange.startDay)}} au {{dayName(dayRange.endDay)}}</p>
           </ng-template>
           <button class="delete" (click)="removeDayRange(i)" >x</button>
         </div>
@@ -53,11 +46,11 @@
 
 
       <div>
-        <p>De
+        <p>Du
         <select [(ngModel)]="ip_dayStart" >
           <option *ngFor="let dayIndex of ip_listDayIndex" [ngValue]="dayIndex" >{{dayName(dayIndex)}}</option>
         </select>
-          à
+          au
         <select [(ngModel)]="ip_dayEnd" >
           <option *ngFor="let dayIndex of ip_listDayIndex" [ngValue]="dayIndex" >{{dayName(dayIndex)}}</option>
         </select>
