--- a/angularProject/nogashiFront/src/app/components/common/header/header.component.html
+++ b/angularProject/nogashiFront/src/app/components/common/header/header.component.html
@@ -1,8 +1,8 @@
 <header>
     <div class="menu">
-        <a routerLink="/welcome-merchant" *ngIf="connexionService.getLocalConnectedRole()==='MERCHANT'"><div class="cercle"><i class="fab fa-maxcdn"></i></div></a>
-        <a routerLink="/welcome-individual" *ngIf="connexionService.getLocalConnectedRole()==='INDIVIDUAL'"><div class="cercle"><i class="fab fa-maxcdn"></i></div></a>
-        <a routerLink="/welcome-association" *ngIf="connexionService.getLocalConnectedRole()==='ASSOCIATION'"><div class="cercle"><i class="fab fa-maxcdn"></i></div></a>
+        <a routerLink="/welcome-merchant" *ngIf="connexionService.getLocalConnectedRole()===UserRole.MERCHANT"><div class="cercle"><i class="fab fa-maxcdn"></i></div></a>
+        <a routerLink="/welcome-individual" *ngIf="connexionService.getLocalConnectedRole()===UserRole.INDIVIDUAL"><div class="cercle"><i class="fab fa-maxcdn"></i></div></a>
+        <a routerLink="/welcome-association" *ngIf="connexionService.getLocalConnectedRole()===UserRole.ASSOCIATION"><div class="cercle"><i class="fab fa-maxcdn"></i></div></a>
         <a routerLink="/welcome" *ngIf="!connexionService.isLocalConnected()"><div class="cercle"><i class="fab fa-maxcdn"></i></div></a>        <div class="icones-menu">
           <div class="icones-user">
                 <i class="fas fa-user-circle"></i>
@@ -40,9 +40,9 @@
           </a>
              <nav>
                 <ul>
-                    <a routerLink="/welcome-merchant" *ngIf="connexionService.getLocalConnectedRole()==='MERCHANT'"><li class="onglet-menu-principal">Accueil</li></a>
-                    <a routerLink="/welcome-individual" *ngIf="connexionService.getLocalConnectedRole()==='INDIVIDUAL'"><li class="onglet-menu-principal">Accueil</li></a>
-                    <a routerLink="/welcome-association" *ngIf="connexionService.getLocalConnectedRole()==='ASSOCIATION'"><li class="onglet-menu-principal">Accueil</li></a>
+                    <a routerLink="/welcome-merchant" *ngIf="connexionService.getLocalConnectedRole()===UserRole.MERCHANT"><li class="onglet-menu-principal">Accueil</li></a>
+                    <a routerLink="/welcome-individual" *ngIf="connexionService.getLocalConnectedRole()===UserRole.INDIVIDUAL"><li class="onglet-menu-principal">Accueil</li></a>
+                    <a routerLink="/welcome-association" *ngIf="connexionService.getLocalConnectedRole()===UserRole.ASSOCIATION"><li class="onglet-menu-principal">Accueil</li></a>
                     <a routerLink="/welcome" *ngIf="!connexionService.isLocalConnected()"><li class="onglet-menu-principal">Accueil</li></a>
                     <a routerLink="/findUs"><li class="onglet-menu-principal">Ou nous trouver ?</li></a>
                     <a routerLink="/generalFaq"><li class="onglet-menu-principal">F.A.Q.</li></a>
