--- a/angularProject/nogashiFront/src/app/components/tests/test/test.component.scss
+++ b/angularProject/nogashiFront/src/app/components/tests/test/test.component.scss
@@ -9,6 +9,31 @@
     right: 50px;
 }
 
+.sb_logintest
+{
+  position: fixed;
+  z-index: 99;
+  bottom: 10px;
+  right: 100px;
+}
+
+.role_0 {     /* INDIVIDUAL */
+  background-color: cornflowerblue;
+  color: white;
+}
+.role_1 {     /* MERCHANT */
+  background-color: #3cb100;
+  color: white;
+}
+.role_2 {     /* ASSOCIATION */
+  background-color: yellow;
+  color: black;
+}
+.role_3 {     /* ADMIN */
+  background-color: red;
+  color: white;
+}
+
 
 .testPanel
 {
