--- a/angularProject/nogashiFront/src/app/components/tests/test/test.component.html
+++ b/angularProject/nogashiFront/src/app/components/tests/test/test.component.html
@@ -28,9 +28,9 @@
       </div>
 
       <button (click)="editMode = ! editMode" >Edit</button>
-      <app-scheduler-week-txt [scheduler]="scheduler" [schedulerType]="1" [editMode]="editMode" (schedulerChange)="this.scheduler = $event" ></app-scheduler-week-txt>
-      <app-scheduler-week-txt [scheduler]="scheduler" [schedulerType]="2" [editMode]="editMode" (schedulerChange)="this.scheduler = $event" ></app-scheduler-week-txt>
-      <app-scheduler-week-txt [scheduler]="scheduler" [schedulerType]="3" [editMode]="editMode" (schedulerChange)="this.scheduler = $event" ></app-scheduler-week-txt>
+      <app-scheduler-week-txt [scheduler]="scheduler" [schedulerType]="SchedulerWeekType.OPEN" [editMode]="editMode" (schedulerChange)="this.scheduler = $event" ></app-scheduler-week-txt>
+      <app-scheduler-week-txt [scheduler]="scheduler" [schedulerType]="SchedulerWeekType.PRODUCT_PROMOTION" [editMode]="editMode" (schedulerChange)="this.scheduler = $event" ></app-scheduler-week-txt>
+      <app-scheduler-week-txt [scheduler]="scheduler" [schedulerType]="SchedulerWeekType.PRODUCT_UNSOLD" [editMode]="editMode" (schedulerChange)="this.scheduler = $event" ></app-scheduler-week-txt>
       <app-scheduler-week-vsl [scheduler]="scheduler"></app-scheduler-week-vsl>
 
       <div class="navbar-right">
