--- a/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/welcome/welcome.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/welcome/welcome.component.html
@@ -4,7 +4,7 @@
 <section>
     <div class="diaporama">
        <img id="image" class="image-diaporama" src="assets/img/diaporama/boulangerie3.jpg" alt="Photo d'un commerce, une boulangerie">
-       <div id="slogan" class="slogan">" Slogan de l'Appli "</div>
+       <div id="slogan" class="slogan">" Notre Solution Contre Le Gaspillage Alimentaire "</div>
        <ul class="bouton-diaporama">
            <li id="arrow-left" class="arrow-left"><i class="fas fa-caret-left"></i></li>
            <li id="play-pause" class="play-pause">
@@ -50,7 +50,7 @@
             <figure>
               <figcaption>
                 <h4 class="titre-particulier">Particulier</h4>
-                <p class="texte-particulier"> Nisi mihi Phaedrum, inquam, tu mentitum aut Zenonem putas, quorum utrumque audivi,</p>
+                <p class="texte-particulier"> Inscrivez-vous et profitez des dernières offres de nos partenaires.</p>
               </figcaption>
             </figure>
           </a>
@@ -59,8 +59,8 @@
         <article class="commercant col-3 offset-1">
           <figure >
             <figcaption>
-              <h4 class="titre-commercant">Commercant</h4>
-              <p class="texte-commercant"> Nisi mihi Phaedrum, inquam, tu mentitum aut Zenonem putas, quorum utrumque audivi,</p>
+              <h4 class="titre-commercant">Commerçant</h4>
+              <p class="texte-commercant"> Partagez facilement et rapidement vos produits invendus et vos offres.</p>
             </figcaption>
           </figure>
         </article>
@@ -69,7 +69,7 @@
           <figure >
             <figcaption>
               <h4 class="titre-association">Association</h4>
-              <p class="texte-association"> Nisi mihi Phaedrum, inquam, tu mentitum aut Zenonem putas, quorum utrumque audivi,</p>
+              <p class="texte-association"> Inscrivez-vous pour récupéré les invendus de nos commerces partenaires.</p>
             </figcaption>
           </figure>
         </article>
@@ -87,7 +87,7 @@
                   <div class="cercle-avatar">
                       <img class="avatar" src="assets/img/profil/profil.png" alt="">
                   </div>
-                  <p class="texte-avis">" Neque erat umquam controversia, quid ego intellegerem, sed quid probarem. "</p>
+                  <p class="texte-avis">" Un moyen efficace pour découvrir de nouveaux produits à petits prix tout en faisant une bonne action. "</p>
                   <div class="note">
                       <i class="fas fa-star"></i>
                       <i class="fas fa-star"></i>
@@ -105,7 +105,9 @@
       <div class="row">
         <div class="bloc-confiance col-12">
            <h3 class="titre-confiance">// Ils nous font confiance</h3>
-           <p class="texte-confiance">Raptim igitur properantes ut motus sui rumores  celeritate nimia praevenirent, vigore corporum ac levitate confisi per flexuosas  semitas ad summitates collium tardius evadebant.vigore corporum ac levitate confisi per flexuosas  semitas ad summitates collium tardius evadebant properantes ut motus sui.</p>
+          <p class="texte-confiance"> De nombreux commerçants nous accordent leur confiance pour atteindre l'objectif <span class="span-zero">"zero gaspillage"</span>.
+                                       Nous nous engageons a leurs cotés dans ce combat pour reduire au maximun le gaspillage alimentaire."
+           </p>
         </div>
 
         <div class="bloc-logo">
@@ -124,7 +126,7 @@
         <div class="bloc-trouver col-12">
            <div class="effet-trouver">
              <h3 class="titre-trouver">// Ou nous trouver ?</h3>
-             <p class="texte-trouver">Raptim igitur properantes ut motus sui rumores  celeritate nimia praevenirent, vigore corporum ac levitate..</p>
+             <p class="texte-trouver">Cliquez sur "savoir plus" afin de découvrir les commerçant et associations partenaires de notre solution anti-gaspillage.</p>
            </div>
            <a href=findUs><div class="bouton-savoir-plus">EN SAVOIR +</div></a>
         </div>
