--- a/angularProject/nogashiFront/src/app/components/modules/scheduler-week-txt/scheduler-week-txt.component.scss
+++ b/angularProject/nogashiFront/src/app/components/modules/scheduler-week-txt/scheduler-week-txt.component.scss
@@ -1,23 +1,204 @@
-
-
-.line{
-  display: flex;
-  width: 100%;
-  flex-wrap: nowrap;
-  justify-content: space-between;
+.bloc-horaires {
+  background-color: var(--couleurGrisClair);
+  border-top: 1px solid var(--couleurNoir);
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 
+.titre-horaires {
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 1.3em;
+  font-weight: 600;
+  text-decoration: underline var(--couleurBlancCreme);
+  color: var(--couleurNoir);
+  padding-top: 20px;
+  margin-left: 30px;
+}
 
-.delete
-{
-  background-color: #ff4740;
+.fa-clock {
+  color: var(--couleurVerte);
+}
+
+.bloc-text-horaires {
+  margin-left: 60px;
+  display: flex;
+}
+
+.text-jour {
+  font-weight: bold;
+  color: var(--couleurNoir);
+  margin-bottom: 0.5rem;
+  display: flex;
+}
+
+.bloc-heure {
+  display: flex;
+}
+
+.text-heure {
+  font-style: italic;
+  margin-left: 7px;
+}
+
+.delete {
   width: 30px;
   height: 30px;
-  line-height: 18px;
-  font-size: 14px;
+  line-height: 0px;
+  font-size: 2em;
   border-radius: 60%;
-  color: white;
+  color: var(--couleurRougeIncorrect);
   text-align: center;
   vertical-align: middle;
   border: none;
 }
+
+.fa-times-circle {
+  font-size: 0.65em;
+}
+
+.editContainer {
+  background-color: var(--couleurNoir);
+  color: var(--couleurBlancCreme);
+  padding-top: 30px;
+  padding-bottom: 30px;
+  margin-bottom: 30px;
+}
+
+.text-edition {
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 1.1em;
+  font-weight: 600;
+  color: var(--couleurBlancCreme);
+  margin-left: 60px;
+  margin-bottom: 7px;
+}
+
+.groupe-bouton {
+  margin-top: 15px;
+}
+
+.bouton-ajouter {
+  width: 130px;
+  font-family: sans-serif;
+  font-weight: 600;
+  font-size: 12px;
+  text-transform: uppercase;
+  text-align: center;
+  color: var(--couleurVerte);
+  background: var(--couleurBlancCreme);
+  border: none;
+  border-radius: 28px;
+  transform: translate(0%, 0%);
+  padding: 12px 20px 12px 20px;
+  margin-left: 20px;
+  -webkit-box-shadow: 0 9px 6px -6px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 9px 6px -6px rgba(0, 0, 0, 0.3);
+  -webkit-transition: all 0.5s ease-out;
+  transition: all 0.5s ease-out;
+  cursor: pointer;
+}
+
+.bouton-ajouter:hover {
+  color: var(--couleurNoir);
+  background:  var(--couleurVerte);
+}
+
+.bloc-edition {
+  margin-left: 60px;
+}
+
+.bloc-select {
+  display: flex;
+}
+
+.label-formulaire {
+  font-family: 'roboto', sans-serif;
+  font-size: 0.9em;
+  font-weight: 400;
+  color: var(--couleurBlancCreme);
+  margin-right: 8px;
+}
+
+.liste-deroulante {
+  width: 120px;
+  height: 30px;
+  font-family: 'roboto', sans-serif;
+  font-size: 1em;
+  font-weight: 400;
+  color: var(--couleurNoir);
+  border: 1.5px solid #000;
+  border-radius: 5px;
+  padding-left: 10px;
+}
+
+.liste-deroulante2 {
+  width: 70px;
+  height: 30px;
+  font-family: 'roboto', sans-serif;
+  font-size: 1em;
+  font-weight: 400;
+  color: var(--couleurNoir);
+  border: 1.5px solid #000;
+  border-radius: 5px;
+  padding-left: 10px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+}
+
+.bouton-ajouter2 {
+  width: 130px;
+  font-family: sans-serif;
+  font-weight: 600;
+  font-size: 12px;
+  text-transform: uppercase;
+  text-align: center;
+  color: var(--couleurVerte);
+  background: var(--couleurBlancCreme);
+  border: none;
+  border-radius: 28px;
+  transform: translate(0%, 0%);
+  padding: 12px 20px 12px 20px;
+  margin-right: 10px;
+  -webkit-box-shadow: 0 9px 6px -6px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 9px 6px -6px rgba(0, 0, 0, 0.3);
+  -webkit-transition: all 0.5s ease-out;
+  transition: all 0.5s ease-out;
+  cursor: pointer;
+}
+
+.bouton-ajouter2:hover {
+  color: var(--couleurNoir);
+  background:  var(--couleurVerte);
+}
+
+.bouton-ajouter3 {
+  width: 145px;
+  font-family: sans-serif;
+  font-weight: 600;
+  font-size: 12px;
+  text-transform: uppercase;
+  text-align: center;
+  color: var(--couleurVerte);
+  background: var(--couleurBlancCreme);
+  border: none;
+  border-radius: 28px;
+  transform: translate(0%, 0%);
+  padding: 12px 20px 12px 20px;
+  margin-right: 10px;
+  -webkit-box-shadow: 0 9px 6px -6px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 9px 6px -6px rgba(0, 0, 0, 0.3);
+  -webkit-transition: all 0.5s ease-out;
+  transition: all 0.5s ease-out;
+  cursor: pointer;
+}
+
+.bouton-ajouter3:hover {
+  color: var(--couleurNoir);
+  background:  var(--couleurVerte);
+}
+
+select:focus {
+  background-color: var(--couleurVerte);
+  border: none;
+}
+
