--- a/angularProject/nogashiFront/src/app/components/modules/scheduler-week-vsl/scheduler-week-vsl.component.scss
+++ b/angularProject/nogashiFront/src/app/components/modules/scheduler-week-vsl/scheduler-week-vsl.component.scss
@@ -1,34 +1,39 @@
 
 
-.week{
-  position: relative;
+.week {
+  font-family: 'roboto', sans-serif;
+  font-size: 1em;
+  font-weight: 600;
+  font-style: italic;
   display: flex;
   flex-wrap: nowrap;
-  border: 3px solid #000000;
+  background-color: var(--couleurBlancCreme);
+  margin-top: 40px;
 }
 
-
-.day{
-  border: 1px solid #000000;
+.bloc-jour {
+  border: 0.7px solid var(--couleurGrisClair);
 }
 
-.name {
+.jour {
+  border: 1em solid #888888;
+}
+
+.titre-jour {
   padding: 3px 9px;
-  border: 1px solid #000000;
   height: 38px;
   width: 90px;
   text-align: center;
+  background-color: var(--couleurNoir);
+  color: var(--couleurVerte);
 }
 
-.hours_container
-{
-  height: 300px;
+.hours_container {
+  height: 500px;
   width: 100%;
 }
 
-
-.offseted
-{
+.offseted {
   position: absolute;
   margin-top: 40px;
 }
@@ -41,34 +46,38 @@
 }
 
 
-.hoursLine {
-  white-space: nowrap;
+.heure-ligne {
   width: 100%;
   height: 4.16%;
-  border: 1px solid #888888;
+  border: 0.7px solid #888888;
 }
 
-.hoursLine > .txt {
-  font-size: 9px;
-  line-height: 9px;
-  font-weight: bolder;
+.heure {
+  font-family: 'roboto', sans-serif;
+  font-size: 0.85em;
+  font-weight: 600;
+  font-style: italic;
   margin-left: 3px;
 }
 
-.hoursRange
-{
-  width: 92px;
+.hoursRange {
+  width: 100px;
   position: absolute;
+  line-height: 0px;
 }
+
 .hoursRange_0{
   background-color: #FF0000;
 }
+
 .hoursRange_1{      /*  Commerce Open */
   background-color: #3cb100;
 }
+
 .hoursRange_2{      /*  Product in Promotion */
   background-color: #ddd800;
 }
+
 .hoursRange_3{      /*  Product in UnSold */
   background-color: #cd8000;
 }
