--- a/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/welcome/welcome.component.scss
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/welcome/welcome.component.scss
@@ -17,7 +17,7 @@
 
         .slogan {
             font-family: 'Shadows Into Light Two', cursive;
-            font-size: 3em;
+            font-size: 2em;
             font-style: italic;
             font-weight: 600;
             font-style: italic;
@@ -217,8 +217,8 @@
           font-style: italic;
           font-weight: 600;
           color: var(--couleurBlancCreme);
-          margin-left: 10%;
-          margin-top: 35%;
+          margin-left: 12%;
+          margin-top: 30%;
           position: absolute;
         }
 
@@ -228,20 +228,20 @@
           font-style: italic;
           font-weight: 400;
           color: var(--couleurBlancCreme);
-          bottom: 15px;
+          bottom: 25px;
           position: absolute;
         }
 
         .particulier {
           height: 250px;
-          background-image: url(/assets/img/offre/particulier3.jpg);
+          background-image: url(/assets/img/offre/particulier2.jpg);
           background-position: center;
           background-size: cover;
           -webkit-box-shadow: 10px 10px 21px -4px rgba(0,0,0,0.16);
           -moz-box-shadow: 10px 10px 21px -4px rgba(0,0,0,0.16);
+          box-shadow: 10px 10px 21px -4px rgba(0,0,0,0.16);
 
         }
-
 
         .titre-commercant {
           font-family: 'Shadows Into Light Two', cursive;
@@ -249,7 +249,7 @@
           font-style: italic;
           font-weight: 600;
           color: var(--couleurBlancCreme);
-          margin-left: 10%;
+          margin-left: 6%;
           margin-top: 35%;
           position: absolute;
         }
@@ -260,7 +260,7 @@
           font-style: italic;
           font-weight: 400;
           color: var(--couleurBlancCreme);
-          bottom: 15px;
+          bottom: 25px;
           position: absolute;
         }
 
@@ -281,7 +281,7 @@
           font-style: italic;
           font-weight: 600;
           color: var(--couleurBlancCreme);
-          margin-left: 10%;
+          margin-left: 7%;
           margin-top: 35%;
           position: absolute;
         }
@@ -292,7 +292,7 @@
           font-style: italic;
           font-weight: 400;
           color: var(--couleurBlancCreme);
-          bottom: 15px;
+          bottom: 25px;
           position: absolute;
         }
 
@@ -398,6 +398,14 @@
             margin-right: 10%;
         }
 
+        .span-zero {
+            font-size: 1.3em;
+            font-family: 'nunito', sans-serif;
+            font-style: italic;
+            font-weight: 600;
+            color: var(--couleurVerte);
+        }
+
         .bloc-logo {
             width: 100%;
             margin-bottom: 100px;
@@ -448,11 +456,10 @@
             font-size: 0.9em;
             font-weight: 400;
             line-height: 1.3;
-            text-align: left;
+            text-align: center;
             color: dimgray;
             color: var(--couleurBlancCreme);
-            margin-left: 15%;
-            margin-right: 15%;
+
         }
 
 
