--- a/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/welcome/welcome.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/welcome/welcome.component.html
@@ -28,7 +28,7 @@
                <br>
                <br>
                <br>
-               <p class="phrase-cle"><span class="chiffre">70%</span> chiffres sur le gachis. venissent.</p>
+               <p class="phrase-cle"><span class="chiffre"><i class="fas fa-quote-left"></i></span> Le gaspillage alimentaire représente 30 kg par personne et par an. <span class="chiffre"><i class="fas fa-quote-right"></i></span></p>
                <br>
                <br>
                <br>
